--- a/WindowsFormsAppKisboltosProgram/WindowsFormsAppKisboltosProgram.csproj
+++ b/WindowsFormsAppKisboltosProgram/WindowsFormsAppKisboltosProgram.csproj
@@ -106,6 +106,12 @@
     <Compile Include="formAruInsert.Designer.cs">
       <DependentUpon>formAruInsert.cs</DependentUpon>
     </Compile>
+    <Compile Include="formRakrrozasDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formRakrrozasDelete.Designer.cs">
+      <DependentUpon>formRakrrozasDelete.cs</DependentUpon>
+    </Compile>
     <Compile Include="formRakrrozasEdit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formAruInsert.resx">
       <DependentUpon>formAruInsert.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formRakrrozasDelete.resx">
+      <DependentUpon>formRakrrozasDelete.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formRakrrozasEdit.resx">
       <DependentUpon>formRakrrozasEdit.cs</DependentUpon>
