--- a/WindowsFormsAppKisboltosProgram/WindowsFormsAppKisboltosProgram.csproj
+++ b/WindowsFormsAppKisboltosProgram/WindowsFormsAppKisboltosProgram.csproj
@@ -48,6 +48,24 @@
     <Reference Include="K4os.Hash.xxHash, Version=1.0.6.0, Culture=neutral, PublicKeyToken=32cd54395057cec3, processorArchitecture=MSIL">
       <HintPath>..\packages\K4os.Hash.xxHash.1.0.6\lib\net46\K4os.Hash.xxHash.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1537.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1537.0\lib\net40\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.Design, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1537.0\lib\net40\Microsoft.ReportViewer.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1537.0\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1537.0\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=8.0.32.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.0.32.1\lib\net48\MySql.Data.dll</HintPath>
     </Reference>
@@ -160,11 +178,30 @@
     <Compile Include="formRendelesUj.Designer.cs">
       <DependentUpon>formRendelesUj.cs</DependentUpon>
     </Compile>
+    <Compile Include="formVevoDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formVevoDelete.Designer.cs">
+      <DependentUpon>formVevoDelete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formVevoEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formVevoEdit.Designer.cs">
+      <DependentUpon>formVevoEdit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formVevoUj.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formVevoUj.Designer.cs">
+      <DependentUpon>formVevoUj.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="rakatozas.cs" />
     <Compile Include="raktar.cs" />
     <Compile Include="rendeles.cs" />
+    <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Termek.cs" />
     <Compile Include="vevo.cs" />
     <EmbeddedResource Include="Form1Nyito.resx">
@@ -206,6 +243,15 @@
     <EmbeddedResource Include="formRendelesUj.resx">
       <DependentUpon>formRendelesUj.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="formVevoDelete.resx">
+      <DependentUpon>formVevoDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formVevoEdit.resx">
+      <DependentUpon>formVevoEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formVevoUj.resx">
+      <DependentUpon>formVevoUj.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -228,6 +274,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SqlServerTypes\readme.htm" />
+    <Content Include="SqlServerTypes\x64\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x64\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
